<your message here>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
 
@@ -26,7 +27,7 @@
       </section>
       <section class="card" id="css-section">
         <h2>CSS</h2>
-        <<ul>
+        <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
@@ -52,5 +53,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
-  </body>
+    <script src="./assets/script.js"></script>
+    </body>
 </html>
